--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>Newportfolio_HTML5 Canvas</title>
+<title>Micha3lDak$</title>
 <!-- write your code here -->
 <style>
   #animation_container {
