--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>Micha3lDak$</title>
+<style>
+html, body{
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+	body {
+		background-color; #1b262c; 
+	}
+	
+</style>
 <!-- write your code here -->
 <style>
   #animation_container, #_preload_div_ {
