--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ html, body{
 	margin:auto;
 	left:0;right:0;
 	top:0;bottom:0;
+	width: 100% !important;
+        height: 100% !important;
   }
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
