--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ html, body{
 	padding: 0;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 	body {
 		background-color; #1b262c; 
