--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ html, body{
 <!-- write your code here -->
 <style>
   #animation_container, #_preload_div_ {
-	position:absolute;
-	margin:auto;
+	position: relative;
+	margin: 0 auto;
 	left:0;right:0;
 	top:0;bottom:0;
 	width: 100% !important;
