--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ html, body{
 	padding: 0;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -31,9 +32,6 @@ html, body{
 <style>
   #animation_container, #_preload_div_ {
 	position: relative;
-	margin: 0 auto;
-	width: 100% !important;
-        height: 100% !important;
   }
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
