--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ html, body{
 <!-- write your code here -->
 <style>
   #animation_container, #_preload_div_ {
-	position: relative;
+	position: absolute;
   }
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
