--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@ html, body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-	body {
-		background-color; #1b262c; 
+	position: relative;
+	background: #1b262c; 
 	}
-	
 </style>
 <!-- write your code here -->
 <style>
