--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <title>Micha3lDak$</title>
 <style>
 html, body{
-	margin: 0;
-	padding: 0;
 	width: 100%;
 	height: 100%;
+	margin: 0;
+	padding: 0;
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
@@ -30,6 +30,7 @@ html, body{
 <style>
   #animation_container, #_preload_div_ {
 	position: relative;
+	text-align: center;
   }
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
